# dubu-pack

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: osx.yml  ubuntu.yml  windows.yml
cmake/: setup.cmake
dubu-pack/: CMakeLists.txt
dubu-pack/src/dubu-pack/: dubu-pack.h
dubu-pack/src/dubu-pack/packer/: packer.cpp  packer.h
dubu_pack/: CMakeLists.txt
dubu_pack/src/: precompiled.h
dubu_pack/src/dubu_pack/: Definitions.h  dubu_pack.h  package.cpp  package.h
dubu_pack/src/dubu_pack/file_locator/: FilesystemFileLocator.cpp  FilesystemFileLocator.h  IFileLocator.h  PackageFileLocator.cpp  PackageFileLocator.h
dubu_pack/src/dubu_pack/package/: Package.cpp  Package.h  _Package.h  package.cpp  package.h
dubu_pack/src/dubu_pack/package/file_locator/: file_locator.h  filesystem_file_locator.cpp  filesystem_file_locator.h  package_file_locator.cpp  package_file_locator.h
dubu_pack/src/dubu_pack/packer/: Packer.cpp  Packer.h  Unpacker.cpp  Unpacker.h
dubu_pack/src/dubu_pack/serializer/: Serializer.h
dubu_pack_cli/: CMakeLists.txt
dubu_pack_cli/src/: main.cpp
dubu_pack_test/: CMakeLists.txt
dubu_pack_test/unit/: PackageTests.cpp  PackerTests.cpp
scripts/: deploy.bat  test.bat
test/: CMakeLists.txt
test/unit/: PackageTests.cpp  PackerTests.cpp  test.cpp
